--- a/src/MessageQueuing.Tests/MessageQueuing.Tests.csproj
+++ b/src/MessageQueuing.Tests/MessageQueuing.Tests.csproj
@@ -36,7 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Messaging" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -53,18 +52,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="JsonMessageFormatterTests.cs" />
     <Compile Include="Models\TestModel.cs" />
+    <Compile Include="QueueManager\ReadTests.cs" />
+    <Compile Include="QueueManager\WriteTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MessageQueuing\MessageQueuing.csproj">
-      <Project>{6010d01d-9780-4534-9fb2-be0d9f5aa74c}</Project>
-      <Name>MessageQueuing</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <None Include="WriteReadTest.orderedtest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
